--- a/app.css
+++ b/app.css
@@ -12,6 +12,7 @@ body
 	padding: 0;
 }
 
+
 #header
 {
 	width: 100%;
@@ -19,11 +20,21 @@ body
 	background-color: #2A3C52;
 }
 
-
+#logo
+{
+	float:left;
+	margin-left: 10px;
+	margin-top: 5px;
+}
+#logo img
+{
+	height: 90px;
+	width: 90px;
+}
 #title
 {
+	float:left;
 	margin-left: 200px;
-	position: absolute;
 	height: 5px;
 	background-color: #6B8787;
 }
@@ -46,7 +57,7 @@ body
 }
 #footer{
 	padding-top: 50px;
-	height: 100%;
+	height: 200px;
 	width: 100%;
 	background-color:#2A3C52;
 }
@@ -70,13 +81,24 @@ body
 }
 
 #images{
-	margin-left: 250px;
+	margin-left: 100px;
 	margin-top: 100px;
-	margin-bottom: 100px;
+	color: #6B8787
 }
 
+
+
 #images img{
-	margin-right: 100px;
+	height: 200px;
+	width: 200px;
+}
+
+.clase
+{
+	float:left;
+	margin-right: 10px;
+	width: 300px;
+	margin-bottom: 50px;
 }
 
 #info 
@@ -119,6 +141,7 @@ body
 	margin-top: 50px;
 	float:left;
 	margin-left: 300px;
+	color:#6B8787;
 }
 
 #form_reg h3
@@ -157,9 +180,11 @@ body
 #table
 {
 	width: 400px;
-	margin-left: 200px;
+	margin-left: auto;
+	margin-right: auto;
 	margin-bottom: 100px;
 	color:#6B8787;
+	text-align: center;
 }
 
 #table h1
@@ -268,4 +293,19 @@ td{
 
 a{
 	text-decoration: none;
+}
+
+#publicidad
+{
+	position: fixed;
+	background-color: #929292;
+	border: solid 5px;
+	margin: 10px;
+	padding: 5px;
+}
+
+#publicidad img
+{
+	height: 400px;
+	width: 300px;
 }
